--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.6.0",
     "@capacitor/keyboard": "5.0.7",
+    "@capacitor/local-notifications": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
+    "@capawesome/capacitor-badge": "^5.0.0",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@ionic/storage": "^4.0.0",
