Tweek UI and update App icon

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-bill-tracker",
+  "name": "bill-tracker",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -51,5 +51,5 @@
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
   },
-  "description": "An Ionic project"
+  "description": "An LiteStep project"
 }
