--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bill-tracker",
+  "name": "pocket-bills",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
