--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -19,7 +19,7 @@ def capacitor_pods
   pod 'CapawesomeCapacitorBadge', :path => '../../node_modules/@capawesome/capacitor-badge'
 end
 
-target 'App' do
+target 'PocketBills' do
   capacitor_pods
   # Add your Pods here
 end
